--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <head>
+        <title>Ruth Legesse</title>
             <p>
                 I own a domain!
             </p>
